
version 1.2.4 (cvs)

	- rfe #1199253 Aliases clobber with Notes Address Book (added
	option to not mark NAB group buddies as transient, so that they'll
	save between Gaim sessions)

	- fix tooltip rendering bug for status messages with tag-like text
	
version 1.2.3 (2005-05-27)
	
	- building against meanwhile 0.4.2

	- rfe #1199253 Aliases clobber with Notes Address Book (added
	resolve hook to end of buddy add from NAB groups)
	
	- rfe #1054813 privacy support (allow all, allow list, deny all,
	deny list, allow buddy list)

	- fix #1194631 Windows file transfer crashes gaim
	
	- fix #1178603 crash on duplicate ldap entries (add buddy)

	- added "Invite to Conference..." context menu

	- don't reset conversation features when remote closes
	conversation; prevents sending of formatted messages as plaintext.

	- rfe #1203358 release info... (added version/credits to plugin
	preferences pane)
	
version 1.2.2 (2005-05-02)

	- fix #1193994 startup crash, whitespace status messages
	
version 1.2.1 (2005-05-01)

	- building against meanwhile 0.4.1

	- removed username split for Server, moving it back to an account
	setting. This should fix log location the way it was pre-1.2.0

	- support for sending NotesBuddy-style images
	
	- support for sending/receiving files over the File Transfer
	service
	
	- added "Supports" section to tooltip text for buddies, displaying
	A/V and File Transfer capabilities
	
	- fix #1185763 gaim-meanwhile 1.2.0 not showing Notesbuddy
	messages

	- added context menu item for NAB groups
	
	- differentiate between read-callback disconnect codes
	
	- support for adding, loading, saving Notes Address Book groups
	
	- quiet down error messages when the other end of a conversation
	logs off. Only display when there are still unsent messages in the
	conversation queue
	
	- added support for sending the LoginCont message when the server
	issues a LoginRedirect if the redirect connect fails
